content/_sass/partials/_timeline.scss
// Adjusting for the .post-content padding
.timeline {
  position: relative;
  width: calc(100% + 4px);
  left: -2px;
}

@include media-breakpoint-up(sm) {
  .timeline {
    position: static;
    width: initial;
    left: initial;
  }
}

@include media-breakpoint-up(md) {
  .timeline {
    margin: 0 0 1.5rem;
  }
}

@include media-breakpoint-up(lg) {
  .timeline {
    margin: 1.5rem;
  }
}

.timeline__list {
  display: flex;
  flex-flow: column wrap;
  list-style: none;
  padding: 0;
}

@include media-breakpoint-up(lg) {
  .timeline__list {
    padding: 0 0 0 2rem;
  }
}

.timeline__event {
  align-items: center;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  margin: 0;
}

@include media-breakpoint-up(xxs) {
  .timeline__event {
    align-items: flex-start;
  }
}

.timeline__event--year {
  align-items: center;
  border: 4px solid $cwl-red;
  border-radius: 50%;
  color: $cwl-red;
  display: flex;
  font-weight: 700;
  font-size: 1.025rem;
  height: 72px;
  justify-content: center;
  margin: 0 1rem 0 0;
  min-width: 72px;
  width: 72px;
}

@include media-breakpoint-up(xxs) {
  .timeline__event--year {
    margin: 0 2rem 0 0;
  }
}

@include media-breakpoint-up(sm) {
  .timeline__event--year {
    margin: 0 2rem 0 0;
  }
}

.timeline__event--data {
  font-size: 0.95rem;
  font-weight: 700;
  padding: 0;
  text-align: left;
}

@include media-breakpoint-up(xxs) {
  .timeline__event--data {
    align-self: center;
    font-size: 1rem;
  }
}

@include media-breakpoint-up(sm) {
  .timeline__event--data {
    font-size: 1.025rem;
  }
}

.timeline__event--long .timeline__event--year,
.timeline__event--long .timeline__event--data {
  position: relative;
  top: -13px;
}

@include media-breakpoint-up(xxs) {
  .timeline__event--long .timeline__event--year,
  .timeline__event--long .timeline__event--data {
    position: static;
    top: initial;
  }
}

.timeline__event--separator {
  background: $timeline-sep-grey;
  content: '';
  display: block;
  height: 36px;
  margin: 0 33.5px;
  width: 4px;
}

